<resources>
    <string name="app_name">marketplace_client_app</string>
    <string name="product_poster_image">Product Poster Image</string>
    <string name="product_name">Product Title</string>
    <string name="product_price">10 DH</string>
    <string name="product_details_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="coupon_text_edit">have a coupon ?</string>
    <string name="buy_button_text">Add To Cart</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name_cart">Product Name</string>
</resources>