<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        android:contentDescription="@string/product_poster_image"
        android:cropToPadding="true"
        android:src="@drawable/book"
        android:layout_marginTop="25dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"

        >
        <TextView
            android:id="@+id/product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:lines="2"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            />
        <TextView
            android:id="@+id/product_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_details_text"
            android:textColor="@color/darkGray"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/coupon_text_edit"
                app:boxBackgroundColor="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="280dp"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/product_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:textColor="@color/darkGray"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                />
        </LinearLayout>

        <Button
            android:id="@+id/outlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/buy_button_text"

            android:textSize="18sp"
            android:textStyle="bold"
            android:backgroundTint="?android:attr/textColorLinkInverse"
            />
    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>