<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<!--    <androidx.cardview.widget.CardView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:id="@+id/product_card"-->
<!--        app:cardCornerRadius="15dp"-->
<!--        android:layout_margin="10dp"-->
<!--        android:clickable="true"-->
<!--        app:cardElevation="10dp"-->
<!--        android:focusable="true"-->
<!--        >-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="vertical"-->
<!--            android:paddingBottom="1dp"-->
<!--            >-->

<!--            <ImageView-->
<!--                android:id="@+id/product_image"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:adjustViewBounds="true"-->
<!--                android:contentDescription="@string/product_poster_image"-->
<!--                android:cropToPadding="true"-->
<!--                android:src="@drawable/book" />-->
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:orientation="horizontal"-->
<!--                >-->
<!--                <TextView-->
<!--                    android:id="@+id/product_title"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:gravity="center"-->
<!--                    android:text="@string/product_name"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="15sp"-->
<!--                    android:textStyle="bold"-->
<!--                    android:lines="2"-->
<!--                    android:layout_weight="1"-->
<!--                    />-->

<!--                <TextView-->
<!--                    android:id="@+id/product_price"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:gravity="center"-->
<!--                    android:text="@string/product_price"-->
<!--                    android:textColor="@color/darkGray"-->
<!--                    android:textSize="13sp"-->
<!--                    android:lines="2"-->
<!--                    android:layout_weight="1"-->
<!--                    />-->
<!--            </LinearLayout>-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="horizontal"-->
<!--            android:padding="2dp"-->
<!--            >-->
<!--&lt;!&ndash;            <TextView&ndash;&gt;-->
<!--&lt;!&ndash;                android:id="@+id/product_info"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_width="0dp"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                android:gravity="center"&ndash;&gt;-->
<!--&lt;!&ndash;                android:text="@string/product_details_text"&ndash;&gt;-->
<!--&lt;!&ndash;                android:textColor="@color/darkGray"&ndash;&gt;-->
<!--&lt;!&ndash;                android:textSize="13sp"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_weight="1"&ndash;&gt;-->
<!--&lt;!&ndash;                />&ndash;&gt;-->
<!--        </LinearLayout>-->

<!--        </LinearLayout>-->
<!--    </androidx.cardview.widget.CardView>-->

<com.google.android.material.card.MaterialCardView
    android:id="@+id/product_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:srcCompat="@drawable/book"
            android:scaleType="centerCrop"
            android:contentDescription="image description"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />
            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/product_price"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                />

        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/buy_button_text"
                style="?attr/borderlessButtonStyle"
                />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
</LinearLayout>